
v6.7
(xx/04/18)

Changes / Improvements / Optimizations:
General | G_AG* visual update. Should offer a cleaner visual experience.
DietPi-Backup | Free space check is now run, prior to backup: https://github.com/Fourdee/DietPi/pull/1686
DietPi-Config | MPEG2/VC1 keys: GPU memory is now increased automatically to 128 (if currently lower), required for this features to function: https://github.com/Fourdee/DietPi/issues/1487
DietPi-Drive_Manager | When formatting EXT4, reserved block size is now set to 0%. This will provide the max available storage for the device (previously 5% was reserved): https://github.com/Fourdee/DietPi/issues/1662#issuecomment-378860605
DietPi-Software | Samba Server: Reduced the process count of smbd from 4 to 3, by fully disabling printer support. Applied to new installations only: https://github.com/Fourdee/DietPi/issues/1689#issuecomment-379038594
DietPi-Software | Samba Server: Max connections is now limited to 'CPU cores * 2'. This will prevent excess connections and resource usage. Applied to new installations only.
DietPi-Software | (RPi): 'rpi-bcm2835-ultrahq' is now the default installed soundcard, if no other soundcard has been selected. Previously this was 'rpi-bcm2835', which offered a lower quality audio output when compared to 'rpi-bcm2835-ultrahq'.

Bug Fixes:
General | Swapfile Generation: Resolved an issue where 'fallocate' would fail for f2fs/xfs filesystem types. dd and pre-allocation is now used for those types: https://github.com/Fourdee/DietPi/issues/1680
DietPi-Config | Fixed an issue, where "CPU Min Freq Limit" could not be set: https://github.com/Fourdee/DietPi/issues/1690
DietPi-Config | (RPi) Resolved an issue where Samba client would fail to mount. 'vers=1.0' is now also used for compatibility: https://github.com/Fourdee/DietPi/issues/1693