@@ -124,11 +124,33 @@
 
 	Credits_Print(){
 
-		echo -e ''
-		echo -e "\e[90m Created by : Daniel Knight\e[0m"
-		echo -e "\e[90m Web        : http://DietPi.com\e[0m"
-		echo -e "\e[90m Twitter    : http://twitter.com/dietpi_\e[0m"
-		echo -e "\e[90m Donate     : http://goo.gl/pzISt9 \e[0m"
+		echo -e "\n\e[90m Founded by         : Daniel Knight"
+		echo -e "\e[90m Additional credits : MichaIng, K-Plan\e[0m"
+
+		local fp_prep_info='/DietPi/dietpi/.prep_info'
+		if [ -f "$fp_prep_info" ]; then
+
+			image_creator="$(sed -n 1p $fp_prep_info)"
+			if [ "$image_creator" = '0' ]; then
+
+				image_creator='Daniel Knight (official)'
+
+			elif [ "$image_creator" = '1' ]; then
+
+				image_creator='MichaIng (official)'
+
+			elif [ "$image_creator" = '2' ]; then
+
+				image_creator='K-Plan (official)'
+
+			fi
+
+			echo -e "\e[90m Image creator      : $image_creator\e[0m"
+
+		fi
+
+		echo -e "\e[90m Web                : http://DietPi.com | http://twitter.com/dietpi_\e[0m"
+		echo -e "\e[90m Donate             : http://goo.gl/pzISt9 \e[0m"
 
 		if [ -n "$IMAGE_ADDITIONAL_CREDITS" ]; then
 
@@ -137,7 +159,7 @@
 
 		fi
 
-		echo -e "\e[90m DietPi's web hosting is powered by: MyVirtualServer.com\e[0m"
+		echo -e "\e[90m DietPi web hosting : Powered by: http://MyVirtualServer.com\e[0m"
 		echo -e ''
 		echo -e "\e[1m dietpi-launcher\e[0m  = All the DietPi programs in one place."
 		echo -e "\e[1m dietpi-config\e[0m    = Feature rich configuration tool for your device."
